--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
-    "vue-router": "^2.7.0"
+    "vue-blu": "^0.1.9",
+    "vue-router": "^2.7.0",
+    "vuejs-datepicker": "^0.9.18"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
