--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-blu": "^0.1.9",
+    "vue-datetime": "^0.4.3",
     "vue-router": "^2.7.0",
     "vuejs-datepicker": "^0.9.18"
   },
