--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "eslint-config-airbnb-base": "^12.1.0",
     "vue": "^2.3.3",
     "vue-blu": "^0.1.9",
     "vue-datetime": "^0.4.3",
+    "vue-resource": "^1.3.4",
+    "vue-resource-2": "^0.8.0",
     "vue-router": "^2.7.0",
     "vuejs-datepicker": "^0.9.18"
   },
