--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+dist/
+npm-debug.log
+yarn-error.log
 
 # Editor directories and files
 .idea
@@ -10,5 +10,3 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-
-.workinprogress/
